# local-personal-finance-analyzer

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
src/subsentry/: __main__.py  app_config.py  cli.py  logging_setup.py  mcp_server.py
src/subsentry/app/: Home.py
src/subsentry/app/pages/: 0_Statements.py  1_Insights.py  2_Subscriptions.py  3_Alerts.py  4_Settings.py
src/subsentry/config/: import_profiles.json
src/subsentry/core/: anomalies.py  engine.py  ingest.py  normalize.py  recurring.py  reporting.py  stats.py
src/subsentry/db/: models.py  repo.py  session.py
src/subsentry/llm/: explain.py  intents.py  ollama.py
src/subsentry/privacy/: encryption.py  redaction.py
test-dataset/: generic_statement_2024-09_rich.csv  generic_statement_2024-10_rich.csv  generic_statement_2024-11_rich.csv  generic_statement_2024-12_rich.csv  generic_statement_2025-01_rich.csv  generic_statement_2025-02_rich.csv  generic_statement_2025-03_rich.csv  generic_statement_2025-04_rich.csv  statement_2024-01.csv  statement_2024-02.csv  statement_2024-03.csv  statement_2024-04.csv  statement_2024-05.csv  statement_2024-06.csv  statement_2024-07.csv  statement_2024-08.csv  statement_2024-09.csv  statement_2024-10.csv  statement_2024-11.csv  statement_2024-12.csv  statement_2025-01.csv  statement_2025-02.csv  statement_2025-03.csv  statement_2025-04.csv
tests/: test_normalize.py  test_stats.py
